# MgscarDriver

./: CMakeLists.txt  main.cpp  toolchain-mingw.cmake
.cache/clangd/index/: json.hpp.4883EEEB74EC6425.idx  list_ports_linux.cc.C99DA08E4D6D64DD.idx  list_ports_osx.cc.0331C4F73AC2A34B.idx  list_ports_win.cc.B980713A42E79611.idx  main.cpp.D9EA831393850B65.idx  password.cpp.F29C4EE94F11EC36.idx  password.h.BB2A0FC0202F54D0.idx  serial.cc.8838DF8354935CAC.idx  serial.h.AF017432878C503C.idx  serialCommunicator.cpp.A3660740110707AD.idx  serialCommunicator.h.CEBBDF29DF5B6596.idx  unix.cc.1E7D47CD70D35F6F.idx  unix.h.DAEC9FEC0363EE9D.idx  v8stdint.h.1D0B210E6EBBD26B.idx  win.cc.3CD4C6953A1F85D1.idx
build-win/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Makefile  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  driverMgscar.sln  driverMgscar.vcxproj  driverMgscar.vcxproj.filters  user_registry.json
build-win/driverMgscar.dir/Release/: driverMgscar.exe.recipe
build-win/driverMgscar.dir/Release/driverMgscar.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  driverMgscar.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build-win/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build-win/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.write.1.tlog
build-win/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
build-win/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
src/libs/password/: password.cpp  password.h
src/libs/serialCommunicator/: serialCommunicator.cpp  serialCommunicator.h
